# ImputationForLDA

./: README  README.md  generate_graphs.py  main.py  pyproject.toml  requirements.txt
Graph_generation/: README  accuracy.py  graphs.py  myLDA.py  myLinearModelBase.py  printing1graph.py
configs/: default.py  str_correlation.py
src/loading/: data_extractor.py  datagen.py
src/metrics/: accuracy.py
src/models/: binary_lda.py  myLDA.py
src/plots/: accuracy_variance.py  imputation_decision.py  printing1graph.py  real_life_data.py
tests/: test_accuracy.py  test_datagen.py  test_lda.py  test_linear_model_base.py  test_main.py
